--- a/btree/iter/Makefile
+++ b/btree/iter/Makefile
@@ -2,10 +2,16 @@ CC=gcc
 CFLAGS=-Wall -std=c11 -pedantic -lm
 FILES=btree.c ../btree.c stack.c ../test_util.c ../test.c
 
-.PHONY: test clean
+.PHONY: test clean run
 
 test: $(FILES)
 	$(CC) $(CFLAGS) -o $@ $(FILES)
+
+run: test
+	@./test > current-test.output
+	@echo "\nTest output differences:"
+	@diff -su ../btree.out current-test.output
+	@rm current-test.output
 
 clean:
 	rm -f test
